Test the java command line a script is run with
CmdGenerator turns directives into the options the JVM is started with, and
had no test. Two ways of getting it wrong are quiet and expensive. An option
placed after the main class is not an option: it is an argument the script
receives, and the JVM setting it was meant to change stays as it was. And an
option the JVM does not recognise is not ignored - it refuses to start - so
which options may be added depends on how old that JVM is.

That second one is why the command is now built from a version rather than
from a JDK. generate(javaCmd, javaMajor) takes the two things it used to ask
a Jdk for, which lets the tests say what Java 8, 21 and 22 each get without
three JDKs being installed to ask.

Thirteen tests: the order of everything around the main class, both kinds of
runtime option, Add-Opens and Add-Exports opened to the unnamed module,
several modules in one manifest entry, the two version thresholds from both
sides, preview, -D properties, the class path with nothing to add to it, and
the error that names //MAIN.

Checked by breaking the generator: dropping the Java 9 threshold, moving the
22 one down, putting the main class before the options, and leaving off
ALL-UNNAMED each fail tests that are about exactly that.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01R3xSSwJLoriFc3sgc2RgkR